--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,8 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-jdbc'
-	implementation 'mysql:mysql-connector-java'
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
+	implementation 'mysql:mysql-connector-java'	
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
     exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 }
@@ -25,11 +26,15 @@ test {
 bootRun.environment([
     "WELCOME_MESSAGE": "hello",
     "SPRING_DATASOURCE_URL": "jdbc:mysql://localhost:3306/tracker_dev?user=tracker&useSSL=false&useTimezone=true&serverTimezone=UTC&useLegacyDatetimeCode=false",
+    "MANAGEMENT_ENDPOINTS_WEB_EXPOSURE_INCLUDE": "*",
+    "MANAGEMENT_ENDPOINT_HEALTH_SHOWDETAILS": "always",
 ])
 
 test.environment([
     "WELCOME_MESSAGE": "Hello from test",
     "SPRING_DATASOURCE_URL": "jdbc:mysql://localhost:3306/tracker_test?user=tracker&useSSL=false&useTimezone=true&serverTimezone=UTC&useLegacyDatetimeCode=false",
+    "MANAGEMENT_ENDPOINTS_WEB_EXPOSURE_INCLUDE": "*",
+    "MANAGEMENT_ENDPOINT_HEALTH_SHOWDETAILS": "always",
 ])
 flyway {
     url = "jdbc:mysql://localhost:3306/tracker_dev?user=tracker&useSSL=false&useTimezone=true&serverTimezone=UTC&useLegacyDatetimeCode=false"
@@ -39,4 +44,7 @@ flyway {
 }
 task testMigrate(type: FlywayMigrateTask) {
     url = "jdbc:mysql://localhost:3306/tracker_test?user=tracker&useSSL=false&useTimezone=true&serverTimezone=UTC&useLegacyDatetimeCode=false"
+}
+springBoot {
+    buildInfo()
 }
